[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mTree"
# version = "0.4-BETA-1"
dependencies = [
    'thespian==3.10.7',
    'Flask==2.3.3',
    'Flask-SocketIO==5.3.2',
    'Flask-APScheduler==1.12.3',
    'Flask-BasicAuth==0.2.0',
    #'Flask-Bootstrap==3.3.7.1',
    'Flask-SQLAlchemy==2.5.1',
    'eventlet==0.33.3',
    'numpy==1.26.0',
    'python-socketio==5.7.2',
    #   'PyYaml==5.3',
    'pyfiglet==0.8.post1',
    'jsonschema==4.4.0',
    'requests==2.27.1',
    'markdown==3.3.6',
    'python-json-logger==2.0.2',
    'python-engineio==4.3.1',
    'simple-term-menu==1.3.0',
    'sympy==1.9',
    'terminaltables==3.1.10',
    'textual==0.38.1',
    'psutil==5.9.5',
    'setproctitle==1.3.3'
]
authors = [
  {name = "GMU CEL", email="mtree.email@gmail.com"},
]
description = "This is the base mTree package"
# license = "MIT"
keywords = ["computational experimental economics"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/gmucsn/mTree"
repository = "https://github.com/gmucsn/mTree"
documentation = "https://github.com/gmucsn/mTree"

[project.scripts]
mTree_runner = "mTree.scripts.mTree_runner:main"
mTree_developer_server = "mTree.scripts.mTree_developer_server:main"
mTree_console = "mTree.utilities.mtree_console:main"

[tool.setuptools.dynamic]
version = {file = "mTree/VERSION"}